reports controller
