# lib/userController.js
@@ -55,6 +55,16 @@ module.exports = class UserController {
     })
   }
 
+  getSession(req){
+    var self = this
+    if ( !req || !req.session || !req.session.userId ) return Promise.resolve(Response.unauthorized())
+    var userId = req.session.userId
+    return this.User.find(userId).exec().then(function(user){
+      if ( !user ) return noSuchUser()
+       return self.createSession(user)
+    })
+  }
+
   findUsers(req){
     if ( !this.manageUsersAllowed(req) ) return Promise.resolve(Response.unauthorized())
     var query = this.User
@@ -69,12 +79,18 @@ module.exports = class UserController {
     })
   }
 
-  manageUsersAllowed(req){
+  manageUsersAllowed(req, allowSelf){
+    if ( allowSelf ) {
+      var session = this.requestSession(req)
+        , userId = parseInt(req.params.id)
+        , sessionUserId = parseInt(session.userId)
+      if ( sessionUserId === userId ) return true
+    }
     return this.sessionController.operationAllowed('manageUsers', this.requestSession(req))
   }
 
   getUser(req){
-    if ( !this.manageUsersAllowed(req) ) return Promise.resolve(Response.unauthorized())
+    if ( !this.manageUsersAllowed(req, true) ) return Promise.resolve(Response.unauthorized())
     var userId = parseInt(req.params.id)
     return this.User.find(userId).exec().then(function(user){
       return user ? Response.ok(user.toJson(allowedUserProperties)) : noSuchUser()
@@ -82,11 +98,10 @@ module.exports = class UserController {
   }
 
   updateUser(req){
-    var session = this.requestSession(req)
-      , userId = parseInt(req.params.id)
-      , sessionUserId = parseInt(session.userId)
+    var userId = parseInt(req.params.id)
       , changes = req.body
-    if ( sessionUserId !== userId && !this.manageUsersAllowed(req) ) return Promise.resolve(Response.unauthorized())
+
+    if ( !this.manageUsersAllowed(req, true) ) return Promise.resolve(Response.unauthorized())
     if ( changes.loginName ) return Promise.resolve(Response.error('NotAllowed', 'Changing loginName is not allowed'))
     if ( changes.epassword ) return Promise.resolve(Response.unauthorized())
     if ( changes.role ) {
